sil/mock_hal/sil_hal.h

/* ------------------------------------------------------------------ */
/* Common                                                              */
/* ------------------------------------------------------------------ */

typedef enum {
    HAL_OK      = 0x00,
    HAL_ERROR   = 0x01,
    HAL_BUSY    = 0x02,
    HAL_TIMEOUT = 0x03
} HAL_StatusTypeDef;
/* ------------------------------------------------------------------ */
/* I2C                                                                 */
/* ------------------------------------------------------------------ */

typedef struct { int sil_dummy; } I2C_HandleTypeDef;
HAL_StatusTypeDef HAL_I2C_IsDeviceReady(I2C_HandleTypeDef *hi2c, uint16_t DevAddress,
                                        uint32_t Trials, uint32_t Timeout);
/* Defined in the firmware's own gpio.c (compiled into the SIL DLL). */
void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin);
/* Python-side CAN model pushes register state here after each bus event. */
void sil_fdcan_set_regs(uint32_t txbrp, uint32_t txbto);
void    *sil_get_hfdcan1(void);
void     sil_flush(void);   /* fflush the C runtime (printf capture) */