sil/harness.py


        # BoardManager (C) + shim + probe
        d.initializeCAN.restype = ct.c_bool
        d.push_on_bus.argtypes = [u16]
        d.push_on_bus.restype = ct.c_bool
        d.sensor_start.restype = ct.c_bool
        d.get_data_it.restype = None
        d.sil_main_step.restype = None
        d.sil_main_start.argtypes = [u32]
        d.sil_main_start.restype = ct.c_int32
        d.sil_start_can_attempts.argtypes = []
        d.sil_start_can_attempts.restype = u32
        d.sil_start_sensor_attempts.argtypes = []
        d.sil_start_sensor_attempts.restype = u32
        d.MX_GPIO_Init.restype = None
        d.sil_can_queue_size.argtypes = [ct.c_void_p]
        d.sil_can_queue_size.restype = ct.c_int
        for name in ("sil_fw_device_instance", "sil_fw_front_can_id",
                     "sil_fw_gpio_pin_4", "sil_fw_payload_length"):
            getattr(d, name).argtypes = []
            getattr(d, name).restype = u32
        d.sil_get_hfdcan1.restype = ct.c_void_p
        d.HAL_GPIO_EXTI_Callback.argtypes = [u16]
        d.HAL_GPIO_EXTI_Callback.restype = None
        d.HAL_I2C_IsDeviceReady.argtypes = [ct.c_void_p, u16, u32, u32]
        d.HAL_I2C_IsDeviceReady.restype = ct.c_int32
        d.sil_flush.restype = None
        d.sil_fdcan_set_regs.argtypes = [u32, u32]
        d.sil_fdcan_set_regs.restype = None

        # CAN wrapper (extern "C")
        d.CAN_create.argtypes = [ct.c_void_p, u32, u32]
        d.CAN_create.restype = ct.c_void_p
        d.CAN_initialize.argtypes = [ct.c_void_p]
        d.CAN_initialize.restype = ct.c_bool
        d.CAN_configureTransmission.argtypes = [ct.c_void_p]
        d.CAN_configureTransmission.restype = ct.c_bool
        d.CAN_addMessageToQueue.argtypes = [ct.c_void_p, u32,
                                            ct.POINTER(u8), u8]
        d.CAN_addMessageToQueue.restype = ct.c_bool
        d.CAN_transmitMessage.argtypes = [ct.c_void_p]
        d.CAN_transmitMessage.restype = ct.c_bool
        d.CAN_checkACK.argtypes = [ct.c_void_p]
        d.CAN_checkACK.restype = ct.c_bool

    # ---------------- convenience accessors ----------------

    @property
    def data_ready(self) -> bool:
        return ct.c_bool.in_dll(self.dll, "data_ready").value

    @data_ready.setter
    def data_ready(self, v: bool) -> None:
        ct.c_bool.in_dll(self.dll, "data_ready").value = v

    @property
    def data(self) -> VL53ResultsData:
        return VL53ResultsData.in_dll(self.dll, "data")

    def i2c_writes_to(self, reg: int) -> list[str]:
        from models import reg_name
        return self.log.find(f"WR {reg_name(reg)}")

    def i2c_reads_of(self, reg: int) -> list[str]:
        from models import reg_name
        return self.log.find(f"RD {reg_name(reg)}")
